tests/integration/test_kubesplit_compat/all-in-one.yml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: namespaces/demo
    source-single: single
    source-double: double
    source-boolean-single: 'true'
    source-boolean-double: 'true'
    source-int-single: '1'
    source-int-double: '2'
  labels:
    example.com/editors: ci
  name: apps-demo
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: namespaces/integration
  labels:
    example.com/editors: developers
  name: apps-integration
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    example.com/access: restricted
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  labels:
    example.com/editors: ops
    example.com/ns-owner: example
  name: ingress-controllers
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  name: traefik-ingress-endpoint
  namespace: ingress-controllers
spec:
  loadBalancerIP: 192.168.10.10
  ports:
    - name: main-http
      port: 80
      targetPort: main-http
    - name: main-https
      port: 443
      targetPort: main-https
  selector:
    app: traefik-ingress-lb
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  name: traefik-web-ui
  namespace: ingress-controllers
spec:
  ports:
    - name: admin
      port: 8080
      targetPort: admin
  selector:
    app: traefik-ingress-lb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  labels:
    app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: ingress-controllers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-lb
  template:
    metadata:
      annotations:
        example.com/generated-by: kustomize
        example.com/kustomize-component: ingresses
        example.com/owner: ops
      labels:
        app: traefik-ingress-lb
    spec:
      containers:
        - args:
            - --configfile=/config/traefik.toml
            - --web
            - --kubernetes
          image: traefik:v1.7.9
          imagePullPolicy: Always
          name: traefik
          ports:
            - containerPort: 80
              name: main-http
            - containerPort: 443
              name: main-https
            - containerPort: 8080
              name: admin
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
          volumeMounts:
            - mountPath: /acme
              name: traefik-acme
            - mountPath: /config
              name: traefik-config
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: traefik-acme
          persistentVolumeClaim:
            claimName: traefik-acme
        - configMap:
            name: traefik-conf
          name: traefik-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-secret: traefik-ui-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.class: traefik
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  name: traefik-web-ui
  namespace: ingress-controllers
spec:
  rules:
    - host: traefik-ui.dev.example.com
      http:
        paths:
          - backend:
              serviceName: traefik-web-ui
              servicePort: admin
